Fixed help bubble z-index on entity-map

--- a/public/custom-css/entity-map.css
+++ b/public/custom-css/entity-map.css
@@ -404,7 +404,7 @@
 }
 
 #help-overlay .popover.open {
-  z-index: 1000;
+  z-index: 1100;
   width: 400px;
 }
 
